--- a/src/app/components/pokemon-list/pokemon-list.component.scss
+++ b/src/app/components/pokemon-list/pokemon-list.component.scss
@@ -2,7 +2,7 @@ td {
     padding: 15px 20px;
     font-size: 17px;
     color: #333333;
-    background: linear-gradient(135deg, #ffcb05, #f4a302); /* Amarillo a dorado */
+    background: linear-gradient(135deg, #ffcb05, #f4a302);
     border-radius: 8px;
     font-family: 'Arial', sans-serif;
     display: flex;
