--- a/src/app/components/pokemon-list/pokemon-list.component.scss
+++ b/src/app/components/pokemon-list/pokemon-list.component.scss
@@ -1,57 +1,146 @@
-td {
-    padding: 15px 20px;
-    font-size: 17px;
-    color: #333333;
-    background: linear-gradient(135deg, #ffcb05, #f4a302);
+.pokedex-table {
+    width: 100%;
+    border-collapse: collapse;
+    background: linear-gradient(135deg, #ff092a, #04598a);
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+  }
+  
+  .pokedex-header {
+    color: rgb(255, 235, 235);
+    font-family: 'Pokemon', sans-serif;
+    font-size: 1.6rem;
+    text-align: center;
+    padding: 16px 0;
+    border-radius: 12px;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+    letter-spacing: 1px;
+  }
+  
+  td {
+    padding: 20px;
+    font-size: 18px;
+    color: #333;
+    background: linear-gradient(135deg, #ffeb3b, #f4a302);
     border-radius: 8px;
-    font-family: 'Arial', sans-serif;
+    font-family: 'Pokemon', sans-serif;
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
-
-.pokemon-name {
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease;
+  }
+  
+  .pokemon-cell {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+  }
+  
+  .pokemon-name {
     cursor: pointer;
-    color: #0059ff;
+    color: #1e88e5;
     font-weight: bold;
-    transition: color 0.3s ease;
-    font-family: 'Verdana', sans-serif;
-}
-
-.pokemon-name:hover {
+    font-size: 1.3rem;
+    transition: color 0.3s ease, text-shadow 0.3s ease;
+    font-family: 'Pokemon', sans-serif;
+    margin-right: 20px;
+  }
+  
+  .pokemon-name:hover {
     color: #d32f2f;
-    text-shadow: 1px 1px 6px rgba(211, 47, 47, 0.4);
-}
-
-.favorite-icon {
+    text-shadow: 0 0 15px rgba(211, 47, 47, 0.7);
+  }
+  
+  .favorite-button {
+    background-color: #ffeb3b;
+    border: none;
+    font-size: 14px;
+    color: #333;
     cursor: pointer;
-    font-size: 28px;
+    padding: 8px 16px;
+    margin-left: 75%;
+    display: flex;
+    align-items: center;
+    border-radius: 12px;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+    font-family: 'Pokemon', sans-serif;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  }
+  
+  .favorite-button i {
+    margin-right: 8px;
+  }
+  
+  .favorite-button:hover {
+    background-color: #f4a302;
+    transform: scale(1.08);
+  }
+  
+  .favorite-icon {
+    cursor: pointer;
+    font-size: 32px;
+    margin-right: 30px;
+    padding: 7px;
     transition: color 0.3s ease, transform 0.2s ease;
     color: #ff8c00;
-}
-
-.favorite-icon:hover {
-    color: #ff0404;
-    transform: scale(1.15);
-}
-
-.favorite {
+  }
+  
+  .favorite-icon:hover {
     color: #d32f2f;
-    animation: pulse 0.3s ease;
-}
-
-.not-favorite {
-    color: #ffffff;
-}
-
-@keyframes pulse {
+    transform: scale(1.25);
+  }
+  
+  .favorite {
+    color: #d32f2f;
+    animation: pulse 0.6s ease-out infinite;
+  }
+  
+  .not-favorite {
+    color: #fff;
+  }
+  
+  .favorite-limit-warning {
+    color: #d32f2f;
+    background-color: #ffeb3b;
+    padding: 16px;
+    font-size: 18px;
+    border-radius: 12px;
+    text-align: center;
+    font-weight: bold;
+    box-shadow: 0 4px 15px rgba(211, 47, 47, 0.3);
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 9999;
+    animation: showAndHideAlert 3s forwards;
+  }
+  
+  @keyframes showAndHideAlert {
     0% {
-        transform: scale(1);
+      opacity: 0;
     }
-    50% {
-        transform: scale(1.3);
+    10% {
+      opacity: 1;
+    }
+    90% {
+      opacity: 1;
     }
     100% {
-        transform: scale(1);
+      opacity: 0;
     }
-}
+  }
+  
+  @keyframes pulse {
+    0% {
+      transform: scale(1);
+    }
+    50% {
+      transform: scale(1.1);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+  
